Fixed deprecations in JDK11